# vibe_rl

./: .gitignore  .venv  README.md  STOIX_ARCHITECTURE_NOTES.md  pyproject.toml
benchmarks/: bench_jit.py  bench_vmap.py
docs/: index.md  openpi_migration_tasks.md  package-lock.json  package.json  training_infrastructure.md
docs/.vitepress/: config.mts
docs/algorithms/: dqn.md  ppo.md  sac.md
docs/api/: agent-protocol.md  networks.md  runner.md  types.md
docs/data/: dataset.md  normalization.md  pipeline.md  transforms.md
docs/deployment/: policy-wrapper.md  websocket.md
docs/environments/: builtin.md  overview.md  wrappers.md
docs/guide/: checkpointing.md  configuration.md  getting-started.md  metrics.md  multi-gpu.md  plotting.md  training.md
docs/research/: jax-env-ecosystem.md  jax_ecosystem_selection.md  jax_rl_frameworks.md  openpi_infra_reference.md  optax_reference.md  orbax_checkpointing.md
examples/: simple_client.py  train_dqn_cartpole.py  train_dqn_gridworld.py  train_ppo_cartpole.py  train_sac_pendulum.py
scripts/: compute_norm_stats.py  plot_rewards.py  serve_policy.py  train.py  train_dqn.py  train_ppo.py  train_sac.py
src/vibe_rl/: __init__.py  checkpoint.py  metrics.py  run_dir.py  schedule.py  seeding.py  sharding.py  types.py  video.py
tests/: conftest.py  test_agent_protocol.py  test_cart_pole.py  test_checkpoint.py  test_data.py  test_dqn.py  test_e2e_integration.py  test_grid_world.py  test_image_space.py  test_image_wrappers.py  test_jit.py  test_metrics.py  test_metrics_integration.py  test_multigpu.py  test_normalize.py  test_pixel_grid_world.py  test_plot_cli.py  test_plotting.py  test_presets.py  test_replay_buffer.py  test_run_dir.py  test_schedule.py  test_seeding.py  test_spaces.py  test_train_state.py  test_transforms.py  test_transition.py  test_video.py  test_wrappers.py
tests/test_algorithms/: test_dqn.py  test_ppo.py  test_sac.py
tests/test_dataprotocol/: test_replay_buffer.py  test_transition.py
tests/test_env/: test_cart_pole.py  test_grid_world.py  test_pendulum.py  test_spaces.py
tests/test_networks/: test_cnn.py  (+2 more)
vibe_rl/: __init__.py  types.py
(+91 files in other folders)
