[project]
name = "vibe-rl"
version = "0.1.0"
description = "Pure JAX reinforcement learning experiments"
readme = "README.md"
authors = [
    { name = "Gonglitian", email = "gongc9@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "equinox>=0.13",
    "optax>=0.2",
    "chex>=0.1.89",
    "distrax>=0.1.5",
    "tyro>=0.9",
]

[project.optional-dependencies]
envs = [
    "gymnax>=0.0.8",
    "brax>=0.12",
    "jumanji>=1.0",
]
checkpoint = [
    "orbax-checkpoint>=0.11",
]
data = [
    "lerobot>=0.1",
    "datasets>=2.19",
    "torch>=2.0",
]
serving = [
    "websockets>=14.0",
    "msgpack>=1.0",
]
plotting = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8",
]
all = [
    "vibe-rl[envs,checkpoint,data,serving,plotting,dev]",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
